fix: change z-index

--- a/src/assets/styles/modal.css
+++ b/src/assets/styles/modal.css
@@ -5,6 +5,7 @@
   height: 100%;
   left: 0;
   top: 0;
+  z-index: 2;
 }
 
 body:has(.shadow) {
@@ -24,4 +25,5 @@ body:has(.shadow) {
   gap: 1rem;
   border-radius: .5rem;
   background: white;
+  z-index: 5;
 }
