--- a/src/components/Nav/style.module.css
+++ b/src/components/Nav/style.module.css
@@ -29,7 +29,7 @@
   position: fixed;
   top: 1.2rem;
   right: 2rem;
-  z-index: 100;
+  z-index: 4;
   transition: all .5s;
   flex-direction: column;
   justify-content: space-evenly;
@@ -58,7 +58,7 @@
   justify-content: center;
   font-size: 8vw;
   transition: all .5s;
-  z-index: 90;
+  z-index: 3;
 }
 
 .mobile__nav_active {
